Workaround KisPaintOpOptionListModel sorting "bug"

BUG: 446631
(cherry picked from commit f713b89c5168b7f9cd15254734cde18928d4235e)